--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,12 @@
 
     <groupId>com.volvadvit</groupId>
     <artifactId>HibernateSample</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>manyToOne</module>
+        <module>common</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
