--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>manyToOne</module>
         <module>common</module>
+        <module>oneToMany</module>
     </modules>
 
     <properties>
